removed the double error line from bingsu to avoid jumping lines

--- a/public/themes/bingsu.css
+++ b/public/themes/bingsu.css
@@ -9,9 +9,9 @@
   --error-extra-color: #640b2c; 
 }
 
-.word.error{
+/* .word.error{
   border-bottom: double 4px var(--error-color);
-}
+} */
 
 #menu .button:nth-child(1){
   color: var(--caret-color);
